--- a/android/assets/jsons/Translations/Techs.json
+++ b/android/assets/jsons/Translations/Techs.json
@@ -1014,6 +1014,7 @@
 	}
 
 	"'The introduction of so powerful an agent as steam to a carriage on wheels will make a great change in the situation of man.' - Thomas Jefferson":{//"Railroad" Technology quotes, it has been translated somewhere.
+		Italian: "'L'introduzione sui carri a ruote di un agente potente come il vapore apporterà un grande cambiamento alla condizione dell'uomo.' - Thomas Jefferson"
 		Simplified_Chinese:"“引入蒸汽这样一个强大的助手来驱动车轮进行运输，将极大地改变人类的境地。”——托马斯·杰斐逊"
 	}
 	
