--- a/android/assets/jsons/Translations/Policies.json
+++ b/android/assets/jsons/Translations/Policies.json
@@ -505,7 +505,7 @@
 ////// Piety branch
 
 	"Piety":{
-		Italian:"Pietà"
+		Italian:"Devozione"
 		Russian:"Набожность"
 		Romanian:"Credință"
 		Spanish:"Piedad"
@@ -1036,7 +1036,7 @@
 ////// Freedom branch
 
 	"Freedom":{
-		Italian:"Autonomia"
+		Italian:"Uguaglianza"
 		Russian:"Свобода"
 		Romanian:"Libertate"
 		Spanish:"Libertad"
