--- a/android/assets/jsons/Translations/Notifications.json
+++ b/android/assets/jsons/Translations/Notifications.json
@@ -535,6 +535,9 @@
 		Simplified_Chinese:"真是不知死活！[civName]竟然敢谴责我们！"
 	}
 	
+	"[cityName] has been connected to your capital!":{
+	}
+	
 	// Trade
 	"[civName] has accepted your trade request":{
 		Italian:"[civName] ha accettato la nostra offerta commerciale."
