--- a/android/assets/jsons/Translations/Other.json
+++ b/android/assets/jsons/Translations/Other.json
@@ -950,8 +950,8 @@
 		Japanese:"[turnsToPopulation]新しい人口に目を向けます"
 	}
 
-	"Food converts to production building settler":{
-		
+	"Food converts to production":{
+
 	}
 
 	"[turnsToStarvation] turns to lose population":{
