--- a/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
+++ b/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
@@ -11,6 +11,7 @@
 		Simplified_Chinese:"读取剪贴板中的游戏数据"
 		Portuguese:"Carregar dados copiados"
 		Japanese:"コピーしたデータを読み込む"
+                Korean:"복사 된 데이터 로드"
 	}
 	
 	"Could not load game from clipboard!":{
@@ -24,6 +25,7 @@
 		Russian:"Не удалось загрузить игру из буфера обмена!"
 		Dutch:"Kon game niet van klembord laden!"
 		Spanish:"No se pudo cargar el juego desde el portapapeles!"
+                Korean:"클립보드에서 게임을 불러 올 수 없습니다!"
 	}
 	
 	"Start game!":{
@@ -36,8 +38,9 @@
 		Portuguese:"Começar partida!"
 		German:"Spiel starten!"
 		Japanese:"ゲームを始める！"
+                Korean:"게임 시작!"
 	}
-
+ 
 	"Map type":{	
 		Italian:"Tipo di mappa"
 		Russian:"Тип карты"
@@ -48,6 +51,7 @@
 		Portuguese:"Tipo de mapa"
 		German:"Kartentyp"
 		Dutch:"Kaarttype"
+                Korean:"지도 유형"
 	}
 	
 	"Number of city-states":{
@@ -55,6 +59,7 @@
 		French:"Nombre de cité-état"
 		Simplified_Chinese:"城邦数量"
 		Russian:"Число городов-государств"
+                Korean:"도시 국가 수"
 		
 	}
 	
@@ -63,34 +68,39 @@
 		French:"Pas de barbare"
 		Simplified_Chinese:"无蛮族"
 		Russian:"Без варваров"
+                Korean:"야만인 없음"
 	}
-
+ 
 	"Victory conditions": {
 		Italian:"Condizioni di Vittoria"
 		French: "Conditions de victoire"
 		Simplified_Chinese:"胜利方式"
 		Russian:"Условия победы"
+                Korean:"승리 조건"
 	}
-
+ 
 	"Scientific": {//it can be showed correct as usual in chinese, so I'm not translate it.
 		Italian:"Scientifica"
 		French: "Scientifique"
 		Simplified_Chinese:"科技胜利"
 		Russian:"Научная"
+                Korean:"과학"
 	}
-
+ 
 	"Domination": {//it can be showed correct as usual in chinese, so I'm not translate it.
 		Italian:"Dominazione"
 		French: "Conquete"
 		Simplified_Chinese:"征服胜利"
 		Russian:"Завоевание"
+                Korean:"정복"
 	},
-
+ 
 	"Cultural": {//it can be showed correct as usual in chinese, so I'm not translate it.
 		Italian:"Culturale"
 		French: "Culturelle"
 		Simplified_Chinese:"文化胜利"
 		Russian:"Культурная"
+                Korean:"문화"
 	}
 	
 	// Map sizes
@@ -104,6 +114,7 @@
 		Simplified_Chinese:"世界大小"
 		Portuguese:"Tamanho do mundo"
 		German:"Kartengröße"
+                Korean:"세계 크기"
 	}
 	
 	
@@ -116,8 +127,9 @@
 		Russian:"Крошечный"
 		Portuguese:"Minúsculo"
 		French:"Minuscule"
+                Korean:"초소형"
 	}
-
+ 
 	"Small":{	
 		Italian:"Piccola"
 		Russian:"Маленький"
@@ -127,8 +139,9 @@
 		Simplified_Chinese:"小"
 		Portuguese:"Pequeno"
 		German:"Klein"
+                Korean:"소형"
 	}
-
+ 
 	"Medium":{	
 		Italian:"Media"
 		Russian:"Средний"
@@ -138,8 +151,9 @@
 		Simplified_Chinese:"中"
 		Portuguese:"Médio"
 		German:"Mittel"
+                Korean:"중형"
 	}
-
+ 
 	"Large":{	
 		Italian:"Grande"
 		Russian:"Большой"
@@ -149,8 +163,9 @@
 		Simplified_Chinese:"大"
 		Portuguese:"Grande"
 		German:"Groß"
+                Korean:"대형"
 	}
-
+ 
 	"Huge":{	
 		Italian:"Enorme"
 		Russian:"Огромный"
@@ -160,6 +175,7 @@
 		Simplified_Chinese:"巨大"
 		Portuguese:"Imenso"
 		German:"Enorm"
+                Korean:"초대형"
 	}
 	
 	
@@ -174,6 +190,7 @@
 		Simplified_Chinese:"难度"
 		Portuguese:"Dificuldade"
 		German:"Schwierigkeitsgrad"
+                Korean:"난이도"
 	}
 	
 	
@@ -186,8 +203,9 @@
 		Simplified_Chinese:"移民"
 		Portuguese:"Colonizador"
 		German:"Siedler"
+                Korean:"개척자"
 	}
-
+ 
 	"Chieftain":{	
 		Italian:"Capo"
 		Russian:"Вождь"
@@ -197,8 +215,9 @@
 		Simplified_Chinese:"酋长"
 		Portuguese:"Cacique"
 		German:"Häuptling"
+                Korean:"족장"
 	}
-
+ 
 	"Warlord":{	
 		Italian:"Condottiero"
 		Russian:"Военачальник"
@@ -208,8 +227,9 @@
 		Simplified_Chinese:"军阀"
 		Portuguese:"General"
 		German:"Kriegsherr"
+                Korean:"장군"
 	}
-
+ 
 	"Prince":{	
 		Italian:"Principe"
 		Russian:"Принц"
@@ -219,8 +239,9 @@
 		Simplified_Chinese:"王子"
 		Portuguese:"Príncipe"
 		German:"Prinz"
+                Korean:"왕자"
 	}
-
+ 
 	"King":{	
 		Italian:"Re"
 		Russian:"Король"
@@ -230,8 +251,9 @@
 		Simplified_Chinese:"国王"
 		Portuguese:"Rei"
 		German:"König"
+                Korean:"왕"
 	}
-
+ 
 	"Emperor":{	
 		Italian:"Imperatore"
 		Russian:"Император"
@@ -241,8 +263,9 @@
 		Simplified_Chinese:"皇帝"
 		Portuguese:"Imperador"
 		German:"Kaiser"
+                Korean:"황제"
 	}
-
+ 
 	"Immortal":{	
 		Italian:"Immortale"
 		Russian:"Бессмертный"
@@ -252,8 +275,9 @@
 		Simplified_Chinese:"仙人"
 		Portuguese:"Imortal"
 		German:"Unsterblicher"
+                Korean:"불멸"
 	}
-
+ 
 	"Deity":{	
 		Italian:"Divinità"
 		Russian:"Божество"
@@ -263,6 +287,7 @@
 		Simplified_Chinese:"天神"
 		Portuguese:"Semi-Deus"
 		German:"Gott"
+                Korean:"신"
 	}
 	
 	//Civilization select
@@ -272,110 +297,130 @@
 		Simplified_Chinese:"电脑"
 		Russian:"ИИ"
 	}
-
+ 
 	"Remove":{
 		Italian:"Rimuovi"
 		Simplified_Chinese:"删除"
+                Korean:"제거"
 	}
-
+ 
 	"Random":{
 		Italian:"Casuale"
 		Simplified_Chinese:"随机"
+                Korean:"무작위"
 	}
 	
 	"Human":{
 		Italian:"Umano"
 		Simplified_Chinese:"玩家"
 		Russian:"Человек"
+                Korean:"인간"
 	}
 	
 	"Hotseat":{
 		Italian:"Hotseat"
 		Russian:"Хотсит"
 		Simplified_Chinese:"热座模式"
+                Korean:"핫시트"
 	}
 	
 	"User Id":{
 		Italian:"ID Utente"
 		Simplified_Chinese:"玩家Id"
 		Russian:"ID игрока"
+                Korean:"사용자 Id"
 	}
 	
 	"Click to copy":{
 		Italian:"Clicca per copiare"
 		Simplified_Chinese:"点击复制"
 		Russian:"Нажмите, чтобы скопировать"
+                Korean:"복사하려면 클릭하십시오"
 	}
 	
 	"Username":{
 		Italian:"Nome utente"
 		Simplified_Chinese:"玩家姓名"
 		Russian:"Пользователь"
+                Korean:"사용자이름"
 	}
 	
 	"Multiplayer":{
 		Simplified_Chinese:"多人游戏"
 		Italian:"Multigiocatore"
 		Russian:"Сетевая игра"
+                Korean:"멀티플레이어"
 	}
 	
 	"Could not download game!":{
 		Italian:"Impossibile scaricare partita!"
 		Russian:"Невозможно загрузить игру!"
+                Korean:"게임을 다운로드할 수 없습니다!"
 	}
 	
 	"Could not upload game!":{
 		Italian:"Impossibile caricare partita"
 		Russian:"Невозможно отправить игру!"
+                Korean:"게임을 업로드할 수 없습니다!"
 	}
 	
 	"Join Game":{
 		Italian:"Unisciti"
 		Simplified_Chinese:"加入游戏"
 		Russian:"Подключиться"
+                Korean:"게임 참여"
 	}
 	
 	"Invalid game ID!":{
 		Italian:"ID Partita non corretto"
 		Simplified_Chinese:"无效的游戏Id！"
 		Russian:"Некорректный ID игры!"
+                Korean:"잘못된 게임 ID 입니다!"
 	}
 	
 	"Copy User Id":{
 		Italian:"Copia ID Utente"
 		Simplified_Chinese:"复制玩家Id"
 		Russian:"Скопировать ID игрока"
+                Korean:"사용자 Id 복사"
 	}
 	
 	"Copy Game Id":{
 		Italian:"Copia ID Partita"
 		Simplified_Chinese:"复制游戏Id"
 		Russian:"Скопировать ID игры"
+                Korean:"게임 Id 복사"
 	}
 	
 	"Set current user":{
 		Italian:"Imposta utente attuale"
+                Korean:"현재 사용자 설정"
 	}
 	
 	"Player ID from clipboard":{
 		Italian:"Copia ID giocatore dagli appunti"
+                Korean:"클립보드의 플레이어 ID"
 	}
 	
 	/// tutorials for multiplayer
 	"To create a multiplayer game, check the 'multiplayer' toggle in the New Game screen, and for each human player insert that player's user ID.":{
 		Italian:"Per creare una partita multigiocatore, attiva la spunta su 'Multigiocatore' nella schermata Nuova Partita, e inserisci l'ID utente per del giocatore per ogni rispettivo giocatore umano"
+                Korean:"멀티플레이어 게임을 만들려면 새로운 게임 화면에서 '멀티플레이어' 토글을 확인하고 각 인간 플레이어에 대해 해당 플레이어의 사용자 ID를 삽입하십시오."
 	}
 	
 	"You can assign your own user ID there easily, and othr players can copy their user IDs here and send them to you for you to include them in the game.":{
 		Italian:"Puoi assegnarvi facilmente il tuo ID Utente, e altri giocatori possono copiarvi il loro ID Utente e mandartelo per unirsi alla partita."
+                Korean:"당신은 당신의 사용자 ID를 쉽게 거기에 할당할 수 있고, 다른 플레이어는 당신의 사용자 ID를 여기에 복사하여 당신이 게임에 포함하도록 당신에게 보낼 수 있습니다."
 	}
 	
 	"Once you've created your game, enter this screen again to copy the Game ID and send it to the other players.":{
 		Italian:"Una volta creata la tua partita, ritorna in questa schermata per copiare l'ID Partita e mandala ad altri giocatori."
+                Korean:"게임을 만든 후 이 화면을 다시 입력하여 게임 ID를 복사하여 다른 플레이어에게 전송하십시오."
 	}
 	
 	"Players can enter you game by copying the game ID to the clipboard, and clicking on the Join Game button":{
 		Italian:"I giocatori possono entrare nella tua partita copiando il codice ID sugli appunti e cliccando il tasto Unisciti."
+                Korean:"플레이어는 게임 ID를 클립보드에 복사하고 게임 참여 버튼을 클릭하여 게임에 들어갈 수 있습니다."
 	}
 	
 	
@@ -386,30 +431,35 @@
 		Italian:"Velocità di gioco"
 		Russian:"Скорость игры"
 		Simplified_Chinese:"游戏速度"
+                Korean:"게임 속도"
 	}
-
+ 
 	"Quick":{
 		Italian:"Rapida"
 		Russian:"Быстрая"
 		Simplified_Chinese:"快速"
+                Korean:"빠름"
 	}
 	
 	"Standard":{
 		Italian:"Standard"
 		Russian:"Обычная"
 		Simplified_Chinese:"标准"
+                Korean:"표준"
 	}
 	
 	"Epic":{
 		Italian:"Epica"
 		Simplified_Chinese:"史诗"
 		Russian:"Эпическая"
+                Korean:"서사시"
 	}
 	
 	"Marathon":{
 		Italian:"Maratona"
 		Simplified_Chinese:"马拉松"
 		Russian:"Марафон"
+                Korean:"마라톤"
 	}
 	
 	
@@ -419,57 +469,69 @@
 	"Starting Era":{
 		Italian:"Epoca iniziale"
 		Simplified_Chinese:"开始时代"
+                Korean:"시작 시대"
 	}
 	
 	"Ancient":{
 		Italian:"Antica"
+                Korean:"고대"
 	}
 	
 	"Classic":{
 		Italian:"Classica"
+                Korean:"고전"
 	}
 	
 	"Medieval":{
 		Italian:"Medievale"
+                Korean:"중세"
 	}
 	
 	"Renaissance":{
 		Italian:"Rinascimentale"
+                Korean:"르네상스"
 	}
 	
 	"Industrial":{
 		Italian:"Industriale"
+                Korean:"산업"
 	}
 	
 	"Modern":{
 		Italian:"Moderna"
+                Korean:"현대"
 	}
 	
 	"Information":{
 		Italian:"Informatica"
+                Korean:"정보"
 	}
 	
 	"Future":{
 		Italian:"Futura"
+                Korean:"미래"
 	}
-
+ 
 ////
 	
 	"It looks like we can't make a map with the parameters you requested!":{
 		Italian:"Sembra che i parametri da te impostati siano eccessivi per questa mappa!"
 		Russian:"Похоже, что мы не можем создать карту с нужными вам параметрами!"
 		Simplified_Chinese:"无法根据你的设置创建地图！"
+                Korean:"당신이 요청한 매개변수로 지도를 만들 수 없을 것 같습니다!"
 	}
 	
 	"Maybe you put too many players into too small a map?":{
 		Italian:"Forse hai inserito troppi giocatori o altri parametri?"
 		Russian:"Может, у вас слишком много игроков для такой небольшой карты?"
 		Simplified_Chinese:"或许你放置了太多玩家在如此小的地图上？"
+                Korean:"너무 작은 지도에 너무 많은 플레이어를 넣었나요?"
 	}
-
+ 
 	"No human players selected!":{
 		Italian:"È necessario almeno un giocatore umano!"
 		Simplified_Chinese:"未选择玩家！"
+                Korean:"인간 플레이어가 선택 되지 않았습니다!"
 	}
 	
 	
@@ -485,13 +547,15 @@
 		Spanish:"Partidas guardadas"
 		Simplified_Chinese:"保存当前游戏"
 		Portuguese:"Partidas salvas"
+                Korean:"현재 게임 저장"
 	}
-
+ 
 	"Show autosaves":{
 		Italian:"Mostra autosalvataggi"
 		Simplified_Chinese:"显示自动存档"
+                Korean:"자동 저장 표시"
 	}
-
+ 
 	"Saved game name":{
 		Italian:"Nome del salvataggio"
 		Russian:"Имя сохранённой игры"
@@ -502,19 +566,22 @@
 		Spanish:"Nombre de partida guardada"
 		Simplified_Chinese:"游戏存档名称"
 		Portuguese:"Nome do jogo salvo"
+                Korean:"저장된 게임 이름"
 	}
-
+ 
 	"Copy to clipboard":{ //this button exsits in "Save game" and "Map editor", it means that we can copy "current game status" to clipboard, "current game status" is not a existing file but some words.
 		Italian:"Copia su appunti"
 		French:"Copier dans le presse-papier"
 		Simplified_Chinese:"复制当前游戏数据到剪贴板"
 		Portuguese:"Copiar" //means copy but it is correct because you can actually paste it as text
 		Russian:"Скопировать в буфер"
+                Korean:"클립보드에 복사"
 	}
 	
 	"Copy saved game to clipboard":{//this button exsits in "Load game",it means that we have a "saved game" file, so we can copy its data to clipboard.
 		Italian:"Copia salvataggio su appunti"
 		Simplified_Chinese:"复制游戏存档到剪贴板"
+                Korean:"클립보드에 저장된 게임 복사"
 	}
 	
 	"Could not load game":{
@@ -527,8 +594,9 @@
 		Spanish:"Imposible cargar partida"
 		Simplified_Chinese:"无法读取游戏"
 		Portuguese:"Não foi possivel carregar a partida salva"
+                Korean:"게임을 불러올 수 없습니다"
 	}
-
+ 
 	"Load [saveFileName]":{ // as in "Load SaveFile2"
 		Italian:"Carica [saveFileName]"
 		Russian:"Загрузить [saveFileName]"
@@ -539,8 +607,9 @@
 		Spanish:"Cargar [saveFileName]"
 		Simplified_Chinese:"读取[saveFileName]"
 		Portuguese:"Carregar [saveFileName]"
+                Korean:"불러오기 [saveFileName]"
 	}
-
+ 
 	"Delete save":{
 		Italian:"Elimina salvataggio"
 		Russian:"Удалить сохранение"
@@ -551,8 +620,9 @@
 		Spanish:"Borrar partida"
 		Simplified_Chinese:"删除存档"
 		Portuguese:"Apagar jogo salvo"
+                Korean:"저장 삭제"
 	}
-
+ 
 	"Saved at":{
 		Italian:"Salvato su"
 		Russian:"Сохранено в"
@@ -563,6 +633,7 @@
 		Spanish:"Guardado en"
 		Simplified_Chinese:"存储时间"
 		Portuguese:"Salvo em"
+                Korean:"저장 시간"
 	}
 	
 	////////////// Load map
@@ -571,24 +642,28 @@
 		Italian:"Carica mappa"
 		Simplified_Chinese:"载入地图"
 		Russian:"Загрузить карту"
+                Korean:"지도 불러오기"
 	}
 	
 	"Are you sure you want to delete this map?":{
 		Simplified_Chinese:"你真想删除这张地图吗？"
 		Italian:"Vuoi davvero cancellare questa mappa?"
 		Russian:"Вы уверены в удалении этой карты?"
+                Korean:"이 지도를 삭제하시겠습니까?"
 	}
 	
 	"Upload":{
 		Simplified_Chinese:"上传"
 		Italian:"Carica"
 		Russian:"Отправить"
+                Korean:"업로드"
   	}
 	
 	"Could not upload map!":{
 		Italian:"Impossibile caricare mappa!"
 		Simplified_Chinese:"无法上传地图！"
 		Russian:"Невозможно отправить карту!"
+                Korean:"지도를 업로드할 수 없습니다!"
 	}
 	
 	////////////// Options
@@ -604,8 +679,9 @@
 		Spanish:"Opciones"
 		Simplified_Chinese:"选项"
 		Portuguese:"Opções"
+                Korean:"설정"
 	}
-
+ 
 	"Display options":{
 		Italian:"Opzioni"
 		Russian:"Параметры экрана"
@@ -617,6 +693,7 @@
 		Simplified_Chinese:"显示选项"
 		Portuguese:"Opções de Vídeo"
 		Japanese:"表示オプション"
+                Korean:"해상도 설정"
 	}
 	
 	"Turns between autosaves":{
@@ -625,6 +702,7 @@
 		Simplified_Chinese:"自动存档/回合"
 		Portuguese:"Turnos entre autosaves"
 		Russian:"Кол-во ходов между автосохранениями"
+                Korean:"자동 저장 라운드"
 	}
 	
 	"Sound effects volume":{
@@ -632,6 +710,7 @@
 		French:"Volume sonore"
 		Simplified_Chinese:"声效大小"
 		Russian:"Громкость звука"
+                Korean:"음향효과 음량"
 	}
 	
 	"Show":{
@@ -645,8 +724,9 @@
 		Simplified_Chinese:"显示"
 		Portuguese:"Mostrar"
 		Japanese:"見せる"
+                Korean:"보이기"
 	}
-
+ 
 	"Hide":{
 		Italian:"Nascondi"
 		Russian:"Убрать"
@@ -658,6 +738,7 @@
 		Simplified_Chinese:"隐藏"
 		Portuguese:"Ocultar"
 		Japanese:"隠す"
+                Korean:"숨기기"
 	}
 	
 	"Worked tiles":{
@@ -671,8 +752,9 @@
 		Simplified_Chinese:"工作的地块"
 		Portuguese:"Terrenos trabalhados"
 		Japanese:"働いたタイル"
+                Korean:"작업된 타일"
 	}
-
+ 
 	"Resources and improvements":{
 		Italian:"Risorse e miglioramenti"
 		Russian:"Ресурсы и улучшения"
@@ -684,8 +766,9 @@
 		Simplified_Chinese:"资源与设施"
 		Portuguese:"recursos e melhorias"
 		Japanese:"リソースと改善"
+                Korean:"자원과 시설"
 	}
-
+ 
 	"Check for idle units":{
 		Italian:"Controlla unità inutilizzate"
 		Simplified_Chinese:"回合结束前查看未行动单位"
@@ -693,42 +776,49 @@
 		German: "Untätige Einheiten anzeigen bei Rundenende"
 		French:"Vérifier les unités inactives"
 		Russian:"Найти незанятые юниты"
+                Korean:"턴이 끝나기 전에 미행동 유닛 보기
 	}
-
+ 
 	"Move units with a single tap":{
 		Italian:"Muovi unità con un solo tocco"
 		German: "Einheiten mit einem Klick bewegen"
 		French:"Bouger les unités en un seul click"
 		Russian:"Перемещать юниты одним касанием"
 		Simplified_Chinese:"点击目标地块立即移动"
+                Korean:"한 번의 탭으로 유닛 이동"
 	}
 	
 	"Show tutorials":{
 		Italian:"Mostra tutorial"
 		Russian:"Показывать обучение"
 		Simplified_Chinese:"显示教程"
+                Korean:"튜토리얼 보이기"
 	}
 	
 	"Auto-assign city production":{
 		Italian:"Autoassegna produzione città"
 		Simplified_Chinese:"自动分配城市产能"
 		Russian:"Автопроизводство в городах"
+                Korean:"도시 생산 자동 할당"
 	}
 	
 	"Auto-build roads":{
 		Italian:"Costruzione strade automatica"
+                Korean:"도로 자동 건설"
 	}
 	
 	"Show minimap":{
 		Italian:"Mostra minimappa",
 		Simplified_Chinese:"显示小地图"
 		Russian:"Показать миникарту"
+                Korean:"미니맵 보이기"
 	}
-
+ 
 	"Fontset":{
 		Italian:"Fontset"
 		Simplified_Chinese:"字体设置"
 		Russian:"Шрифты"
+                Korean:"폰트 설정"
 	}
-
+ 
 }
