--- a/android/assets/jsons/Translations/Buildings.json
+++ b/android/assets/jsons/Translations/Buildings.json
@@ -1138,7 +1138,7 @@
 	}
 
 	"Forbidden Palace":{	
-		Italian:"Palazzo Proibito"
+		Italian:"Città Proibita"
 		Russian:"Запретный дворец"
 		French:"Cité Interdite"
 		Romanian:"Palatul interzis"
