Added river toggles to map editor to see how it looks. Not good, btw - can't see rivers behind mountain/forest/hill tiles... Disabled for now, until we find a better way to display rivers.

--- a/android/assets/jsons/Translations/Terrains,Resources,Improvements.json
+++ b/android/assets/jsons/Translations/Terrains,Resources,Improvements.json
@@ -518,7 +518,7 @@
 		Spanish:"Vino"
 		Simplified_Chinese:"红酒"
 		Portuguese:"Vinho"
-                Korean:""와인
+                Korean:"와인"
 	}
  
 	"Sugar":{
