--- a/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
+++ b/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
@@ -464,52 +464,12 @@
 	
 	
 	
-	// Starting Era
+	// Starting Era, the Era names don't need to translate.
 	
 	"Starting Era":{
 		Italian:"Epoca iniziale"
 		Simplified_Chinese:"开始时代"
                 Korean:"시작 시대"
-	}
-	
-	"Ancient":{
-		Italian:"Antica"
-                Korean:"고대"
-	}
-	
-	"Classic":{
-		Italian:"Classica"
-                Korean:"고전"
-	}
-	
-	"Medieval":{
-		Italian:"Medievale"
-                Korean:"중세"
-	}
-	
-	"Renaissance":{
-		Italian:"Rinascimentale"
-                Korean:"르네상스"
-	}
-	
-	"Industrial":{
-		Italian:"Industriale"
-                Korean:"산업"
-	}
-	
-	"Modern":{
-		Italian:"Moderna"
-                Korean:"현대"
-	}
-	
-	"Information":{
-		Italian:"Informatica"
-                Korean:"정보"
-	}
-	
-	"Future":{
-		Italian:"Futura"
-                Korean:"미래"
 	}
  
 ////
@@ -776,7 +736,7 @@
 		German: "Untätige Einheiten anzeigen bei Rundenende"
 		French:"Vérifier les unités inactives"
 		Russian:"Найти незанятые юниты"
-                Korean:"턴이 끝나기 전에 미행동 유닛 보기
+                Korean:"턴이 끝나기 전에 미행동 유닛 보기"
 	}
  
 	"Move units with a single tap":{
