--- a/android/assets/jsons/Translations/Units,Promotions.json
+++ b/android/assets/jsons/Translations/Units,Promotions.json
@@ -1683,7 +1683,7 @@
 		Simplified_Chinese:"警戒能力"
 	}
 
-	"Range Extension":{
+	"Extended Range":{
 		Italian:"Raggio di tiro ampliato"
 		German:"Reichweite"
 		French:"Portée"
